examples/variables.js
let x = 10;

const shop = "Nullflow Eatery"

// Reassigning variables
x = 20;

shop = "Overflow Eatery" // error

// Older way of declaring a variable. Not reccomended.
var y = 10;